[gd_scene load_steps=7 format=3 uid="uid://bike_scene_001"]

[ext_resource type="Script" path="res://Scripts/Bike.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(70, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wheel"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roof"]
size = Vector2(50, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_front_wheel"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_back_wheel"]
radius = 8.0

[node name="Bike" type="RigidBody2D" groups=["bike"]]
mass = 35.0
gravity_scale = 1.0
linear_damp = 0.0
angular_damp = 0.1
collision_layer = 1
collision_mask = 3
script = ExtResource("1")

[node name="BodySprite" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -15.0
offset_right = 30.0
offset_bottom = 15.0
color = Color(0, 1, 1, 1)

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_body")

[node name="FrontWheelCollision" type="CollisionShape2D" parent="."]
position = Vector2(25, 15)
shape = SubResource("CircleShape2D_front_wheel")

[node name="BackWheelCollision" type="CollisionShape2D" parent="."]
position = Vector2(-25, 15)
shape = SubResource("CircleShape2D_back_wheel")

[node name="FrontWheel" type="Node2D" parent="."]
position = Vector2(25, 15)

[node name="WheelSprite" type="ColorRect" parent="FrontWheel"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 1, 1)

[node name="BackWheel" type="Node2D" parent="."]
position = Vector2(-25, 15)

[node name="WheelSprite" type="ColorRect" parent="BackWheel"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 1, 1)

[node name="FrontRaycast" type="RayCast2D" parent="."]
position = Vector2(25, 15)
target_position = Vector2(0, 50)
enabled = false
collide_with_areas = false
collide_with_bodies = true

[node name="BackRaycast" type="RayCast2D" parent="."]
position = Vector2(-25, 15)
target_position = Vector2(0, 50)
enabled = false
collide_with_areas = false
collide_with_bodies = true

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 5.0
offset = Vector2(200, 0)

[node name="RoofDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 1

[node name="RoofCollision" type="CollisionShape2D" parent="RoofDetector"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_roof")
