extends RigidBody2D
class_name Bike
## æ‘©æ‰˜è½¦ä¸»æ§åˆ¶è„šæœ¬ - å¤„ç†ç‰©ç†ã€æ§åˆ¶ã€ç©ºç¿»æ£€æµ‹

# å¯¼å‡ºå‚æ•°ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­è°ƒæ•´ï¼‰
@export var acceleration := 5000000000.0  # åŠ é€Ÿåº¦ï¼ˆå¤§å¹…æå‡ä»¥å…‹æœåœ°å½¢æ»šåŠ¨ï¼‰
@export var base_thrust_ratio := 2  # åŸºç¡€æ¨åŠ›æ¯”ä¾‹ï¼ˆå¤§å¹…æå‡ï¼‰
@export var max_speed := 200.0  # æœ€å¤§é€Ÿåº¦
@export var rotation_torque := 200000.0  # æ—‹è½¬åŠ›çŸ©ï¼ˆX10å€ - æé€Ÿæ—‹è½¬ï¼‰
@export var air_rotation_multiplier := 3.5  # ç©ºä¸­æ—‹è½¬å€ç‡ï¼ˆå¤§å¹…æå‡ï¼‰

# çŠ¶æ€å˜é‡
var is_on_ground := false  # æ˜¯å¦åœ¨åœ°é¢
var was_on_ground := false  # ä¸Šä¸€å¸§æ˜¯å¦åœ¨åœ°é¢
var is_crashed := false  # æ˜¯å¦å·²æ‘”è½¦
var air_time := 0.0  # å½“å‰æ»ç©ºæ—¶é—´
var last_rotation := 0.0  # ä¸Šä¸€å¸§çš„æ—‹è½¬è§’åº¦

# åµŒå…¥æ£€æµ‹å’Œæ¢å¤
var is_embedded := false  # æ˜¯å¦åµŒå…¥åœ°å½¢
var embedding_time := 0.0  # åµŒå…¥æ—¶é•¿
var embedding_check_timer := 0.0  # æ£€æµ‹è®¡æ—¶å™¨
const EMBEDDING_CHECK_INTERVAL = 0.1  # æ¯0.1ç§’æ£€æµ‹
const MAX_EMBEDDING_TIME = 3.0  # è¶…è¿‡3ç§’å¼ºåˆ¶é‡ç½®

# è·³è·ƒç³»ç»Ÿ
var can_jump := true  # æ˜¯å¦å¯ä»¥è·³è·ƒ
var jump_cooldown_timer := 0.0  # è·³è·ƒå†·å´è®¡æ—¶å™¨
const JUMP_COOLDOWN := 0.3  # è·³è·ƒå†·å´æ—¶é—´ï¼ˆç§’ï¼‰
const JUMP_FORCE := 35000.0  # è·³è·ƒåŠ›

# èŠ‚ç‚¹å¼•ç”¨ï¼ˆå°†åœ¨ _ready ä¸­è·å–ï¼‰
@onready var front_raycast: RayCast2D = $FrontRaycast
@onready var back_raycast: RayCast2D = $BackRaycast
@onready var camera: Camera2D = $Camera2D
@onready var body_sprite: ColorRect = $BodySprite
@onready var front_wheel_sprite: ColorRect = $FrontWheel/WheelSprite
@onready var back_wheel_sprite: ColorRect = $BackWheel/WheelSprite
@onready var roof_detector: Area2D = $RoofDetector

func _ready():
	# è®¾ç½®ç‰©ç†å±æ€§ï¼ˆä¼˜åŒ–ï¼šæ›´è½»æ›´çµæ´»ï¼Œæä½é˜»å°¼ï¼‰
	gravity_scale = 1.0
	mass = 35.0  # å‡è½»è´¨é‡ï¼Œä» 50 é™åˆ° 35
	linear_damp = 0.0  # å®Œå…¨ç§»é™¤ç©ºæ°”é˜»åŠ›
	angular_damp = 0.1  # é™ä½æ—‹è½¬é˜»å°¼

	# åˆå§‹åŒ–æ—‹è½¬è¿½è¸ª
	last_rotation = rotation

	# æ·»åŠ åˆ° "bike" ç»„ï¼ˆæ–¹ä¾¿å…¶ä»–è„šæœ¬æŸ¥æ‰¾ï¼‰
	add_to_group("bike")

	print("ğŸï¸ æ‘©æ‰˜è½¦åˆå§‹åŒ–å®Œæˆï¼Œä½ç½®: %s" % global_position)

	# éªŒè¯ç¢°æ’èŠ‚ç‚¹
	var collision = get_node_or_null("BodyCollision")
	if collision:
		print("âœ… è½¦èº«ç¢°æ’èŠ‚ç‚¹å­˜åœ¨")
	else:
		print("âŒ è½¦èº«ç¢°æ’èŠ‚ç‚¹ç¼ºå¤±ï¼")

	# è¿æ¥è½¦é¡¶ç¢°æ’æ£€æµ‹ä¿¡å·
	roof_detector.body_entered.connect(_on_roof_hit_terrain)
	print("âœ… è½¦é¡¶ç¢°æ’æ£€æµ‹å·²å¯ç”¨")

	# æµ‹è¯•æ¨¡å¼æç¤º
	print("========================================")
	print("ğŸš€ é«˜æ€§èƒ½æµ‹è¯•æ¨¡å¼å·²å¯ç”¨")
	print("æ¨åŠ›ç³»ç»Ÿ: æ’å®šå…¨åŠ›ï¼Œç©ºä¸­ä¹ŸåŠ é€Ÿ")
	print("æ¨åŠ›å€¼: %.0fN (%.0f Ã— %.1f)" % [acceleration * base_thrust_ratio, acceleration, base_thrust_ratio])
	print("æ—‹è½¬åŠ›çŸ©: %.0f" % rotation_torque)
	print("é˜»å°¼: linear=%.1f, angular=%.1f" % [linear_damp, angular_damp])
	print("========================================")

func _physics_process(delta):
	if is_crashed:
		return

	# 0. åµŒå…¥æ£€æµ‹å’Œæ¢å¤ï¼ˆä¼˜å…ˆçº§æœ€é«˜ï¼‰
	embedding_check_timer += delta
	if embedding_check_timer >= EMBEDDING_CHECK_INTERVAL:
		embedding_check_timer = 0.0
		var currently_embedded = detect_embedding()

		if currently_embedded and not is_embedded:
			# åˆšåˆšåµŒå…¥
			is_embedded = true
			embedding_time = 0.0
			print("âš ï¸ æ£€æµ‹åˆ°åµŒå…¥ï¼ä½ç½®: (%.0f, %.0f)" % [global_position.x, global_position.y])
		elif not currently_embedded and is_embedded:
			# æˆåŠŸæ¢å¤
			is_embedded = false
			embedding_time = 0.0
			print("âœ… æ¢å¤æˆåŠŸï¼")

	# å¦‚æœåµŒå…¥ï¼Œåº”ç”¨æ¢å¤åŠ›å¹¶è·³è¿‡æ­£å¸¸ç‰©ç†
	if is_embedded:
		#apply_recovery_force(delta)
		return

	# 1. æ£€æµ‹åœ°é¢çŠ¶æ€
	check_ground_contact()

	# 2. å¤„ç†ç§»åŠ¨ï¼ˆè‡ªåŠ¨å‰è¿›ï¼‰
	handle_movement(delta)

	# 3. å¤„ç†å¹³è¡¡æ§åˆ¶ï¼ˆA/D é”®ï¼‰
	handle_balance_control(delta)

	# 4. è¿½è¸ªæ—‹è½¬ï¼ˆç©ºç¿»æ£€æµ‹ï¼‰
	track_rotation(delta)

	# 5. æ£€æµ‹æ‘”è½¦
	check_crash_conditions()

	# æ›´æ–°ä¸Šä¸€å¸§çŠ¶æ€
	was_on_ground = is_on_ground
	last_rotation = rotation

func check_ground_contact():
	"""æ£€æµ‹æ˜¯å¦ä¸åœ°é¢æ¥è§¦ - ä½¿ç”¨ç‰©ç†ç¢°æ’æ£€æµ‹"""
	# ä½¿ç”¨ç‰©ç†ç¢°æ’æ¥è§¦æ•°é‡æ£€æµ‹åœ°é¢
	var contact_count = get_contact_count()

	# æ£€æŸ¥æ˜¯å¦æœ‰å‘ä¸‹çš„æ¥è§¦ï¼ˆé˜²æ­¢ä¾§é¢ç¢°æ’è¯¯åˆ¤ï¼‰
	var has_ground_contact = false
	if contact_count > 0:
		# ç®€åŒ–ï¼šåªè¦æœ‰ç¢°æ’å°±è®¤ä¸ºåœ¨åœ°é¢ï¼ˆè½®å­ç¢°æ’ä½“åœ¨åº•éƒ¨ï¼‰
		has_ground_contact = true

	is_on_ground = has_ground_contact

	# è°ƒè¯•ï¼šæ¯ç§’è¾“å‡ºä¸€æ¬¡çŠ¶æ€
	if Engine.get_frames_drawn() % 60 == 0:
		print("åœ°é¢æ£€æµ‹ - æ¥è§¦æ•°: %d, åœ¨åœ°é¢: %s, ä½ç½®: (%.0f, %.0f)" % [
			contact_count,
			is_on_ground,
			global_position.x,
			global_position.y
		])

	# æ£€æµ‹ç€é™†ç¬é—´
	if is_on_ground and not was_on_ground:
		on_land()

	# æ£€æµ‹èµ·é£ç¬é—´
	if not is_on_ground and was_on_ground:
		on_takeoff()

func detect_embedding() -> bool:
	"""æ£€æµ‹æ˜¯å¦åµŒå…¥åœ°å½¢"""
	var speed = linear_velocity.length()
	var angle = abs(Global.normalize_angle(rad_to_deg(rotation)))

	# æ¡ä»¶1: é«˜é€Ÿä¸‹è½çªç„¶åœæ­¢ï¼ˆä»>300é™åˆ°<100ï¼‰
	if linear_velocity.y > 300.0 and speed < 100.0:
		return true

	# æ¡ä»¶2: è½¦èº«å€¾æ–œä½†æ— æ³•æ—‹è½¬ï¼ˆå¡ä½ï¼‰
	if angle > 30.0 and abs(angular_velocity) < 0.1 and speed < 80.0:
		return true

	return false

func apply_recovery_force(delta):
	"""æ–½åŠ æ¢å¤åŠ› - å‚ç›´è½¦èº«å‘ä¸Šæ¨"""
	embedding_time += delta

	# æ¢å¤æ–¹å‘ï¼šè½¦èº«çš„å‚ç›´å‘ä¸Šæ–¹å‘
	var recovery_direction = -transform.y

	# è‡ªé€‚åº”åŠ›åº¦ï¼ˆéšæ—¶é—´å¢åŠ ï¼‰
	var base_force = 5000000000.0
	var time_multiplier = 1.0 + (embedding_time * 0.5)
	var force_magnitude = min(base_force * time_multiplier, 150000.0)  # æœ€å¤§150kN

	apply_force(recovery_direction * force_magnitude)

	# è¾…åŠ©ï¼šæ—‹è½¬å›æ­£
	var angle = Global.normalize_angle(rad_to_deg(rotation))
	if abs(angle) > 15.0:
		var correction_torque = -sign(angle) * rotation_torque * 0.2
		apply_torque(correction_torque)

	# è°ƒè¯•è¾“å‡º
	if int(embedding_time * 5) % 5 == 0:
		print("ğŸ”§ æ¢å¤ä¸­: åŠ›=%.0fN, è§’åº¦=%.1fÂ°, æ—¶é•¿=%.2fs" %
			  [force_magnitude, angle, embedding_time])

	# ç´§æ€¥é‡ç½®
	if embedding_time > MAX_EMBEDDING_TIME:
		print("âš ï¸ æ¢å¤å¤±è´¥ - ç´§æ€¥ä¼ é€")
		reset_to_safe_position()

func reset_to_safe_position():
	"""ç´§æ€¥ä¼ é€åˆ°å®‰å…¨ä½ç½®"""
	global_position.y -= 100  # å‘ä¸Šç§»åŠ¨100px
	linear_velocity = Vector2(200, 0)  # ç»™äºˆå‰è¿›é€Ÿåº¦
	angular_velocity = 0.0
	rotation = 0.0
	is_embedded = false
	embedding_time = 0.0
	print("ğŸš‘ ç´§æ€¥é‡ç½®: æ–°ä½ç½® (%.0f, %.0f)" % [global_position.x, global_position.y])

func handle_movement(_delta):
	"""å¤„ç†æ‘©æ‰˜è½¦ç§»åŠ¨ - åœ°é¢å…¨åŠ›ï¼Œç©ºä¸­å‡åŠ"""
	# ç©ºä¸­æ¨åŠ›å‡åŠï¼ˆæ›´çœŸå®ï¼ŒåŒæ—¶å…è®¸é£è¡Œå’Œç‰¹æŠ€ï¼‰
	var thrust_multiplier = 1.0
	if not is_on_ground:
		thrust_multiplier = 0.5

	# æ¨åŠ›ï¼šæ²¿ç€è½¦èº«æ–¹å‘ï¼ˆtransform.xï¼‰
	var forward_direction = transform.x
	var thrust_force = forward_direction * acceleration * base_thrust_ratio * thrust_multiplier
	apply_force(thrust_force)

	# è°ƒè¯•ï¼šæ¯0.5ç§’è¾“å‡ºä¸€æ¬¡æ¨åŠ›ä¿¡æ¯
	if Engine.get_frames_drawn() % 30 == 0:
		var angle_deg = rad_to_deg(rotation)
		var thrust_magnitude = thrust_force.length()
		var on_ground_text = "åœ°é¢" if is_on_ground else "ç©ºä¸­"
		print("ğŸš— æ¨åŠ›è°ƒè¯• - %s, è§’åº¦: %.1fÂ°, æ–¹å‘: (%.2f, %.2f), å¤§å°: %.0fN, é€Ÿåº¦: %.0f px/s" % [
			on_ground_text,
			angle_deg,
			forward_direction.x,
			forward_direction.y,
			thrust_magnitude,
			linear_velocity.length()
		])

func handle_balance_control(delta):
	"""å¤„ç† A/D é”®çš„å¹³è¡¡æ§åˆ¶ + ç©ºæ ¼è·³è·ƒ"""
	var torque = 0.0

	# A é”®ï¼šå‘åå€¾æ–œï¼ˆåç©ºç¿»ï¼‰
	if Input.is_action_pressed("lean_back"):
		torque = -rotation_torque

	# D é”®ï¼šå‘å‰å€¾æ–œï¼ˆå‰ç©ºç¿»ï¼‰
	elif Input.is_action_pressed("lean_forward"):
		torque = rotation_torque

	# ç©ºæ ¼ï¼šè·³è·ƒï¼ˆä»…åœ¨åœ°é¢ä¸”å†·å´å®Œæˆæ—¶ï¼‰
	if Input.is_action_just_pressed("ui_accept") and is_on_ground and can_jump:
		perform_jump()

	# æ›´æ–°è·³è·ƒå†·å´
	if not can_jump:
		jump_cooldown_timer -= delta
		if jump_cooldown_timer <= 0.0:
			can_jump = true

	# ç©ºä¸­æ—‹è½¬æ›´å¿«
	if not is_on_ground:
		torque *= air_rotation_multiplier
		air_time += delta
	else:
		air_time = 0.0

	# æ–½åŠ æ‰­çŸ©
	if torque != 0.0:
		apply_torque(torque)

func perform_jump():
	"""æ‰§è¡Œè·³è·ƒ - å‚ç›´äºè½¦èº«å‘ä¸Š"""
	# è·³è·ƒæ–¹å‘ï¼šå‚ç›´äºè½¦èº«å‘ä¸Šï¼ˆ-transform.yï¼‰
	var jump_direction = -transform.y
	var jump_impulse = jump_direction * JUMP_FORCE

	apply_central_impulse(jump_impulse)

	# å¼€å§‹å†·å´
	can_jump = false
	jump_cooldown_timer = JUMP_COOLDOWN

	print("ğŸ¦˜ è·³è·ƒï¼æ–¹å‘: (%.2f, %.2f), åŠ›: %.0fN" % [
		jump_direction.x,
		jump_direction.y,
		JUMP_FORCE
	])

func track_rotation(delta):
	"""è¿½è¸ªæ—‹è½¬è§’åº¦ï¼Œç”¨äºç©ºç¿»è®¡æ•°"""
	# è®¡ç®—è§’åº¦å˜åŒ–
	var angle_change = rotation - last_rotation

	# å¤„ç†è§’åº¦è·³å˜ï¼ˆä» -Ï€ åˆ° Ï€ æˆ–åå‘ï¼‰
	if angle_change > PI:
		angle_change -= TAU  # TAU = 2Ï€
	elif angle_change < -PI:
		angle_change += TAU

	# ç´¯åŠ åˆ°å…¨å±€æ—‹è½¬è®¡æ•°ï¼ˆè½¬æ¢ä¸ºåº¦æ•°ï¼‰
	if not is_on_ground:  # åªåœ¨ç©ºä¸­è®¡æ•°
		Global.total_rotation += rad_to_deg(angle_change)

func on_takeoff():
	"""èµ·é£ç¬é—´"""
	air_time = 0.0
	Global.total_rotation = 0.0  # é‡ç½®æ—‹è½¬è®¡æ•°
	SignalBus.bike_airborne.emit()
	print("èµ·é£ï¼")

func on_land():
	"""ç€é™†ç¬é—´ - åˆ¤å®šè½åœ°è´¨é‡ï¼ˆä¸å†å› è§’åº¦æ‘”è½¦ï¼‰"""
	var landing_angle = rad_to_deg(rotation)
	var normalized_angle = Global.normalize_angle(landing_angle)

	print("ç€é™†ï¼è§’åº¦: %.1fåº¦, æ»ç©º: %.2fç§’, æ—‹è½¬: %.1fåº¦" % [normalized_angle, air_time, Global.total_rotation])

	# åˆ¤å®šè½åœ°è´¨é‡ï¼ˆæ‰€æœ‰è§’åº¦éƒ½å…è®¸ï¼Œåªæ˜¯åˆ†æ•°ä¸åŒï¼‰
	var quality = ""
	if normalized_angle < Global.PERFECT_ANGLE:
		quality = "PERFECT"
	elif normalized_angle < Global.GREAT_ANGLE:
		quality = "GREAT"
	elif normalized_angle < Global.GOOD_ANGLE:
		quality = "GOOD"
	else:
		quality = "ROUGH"  # ç²—ç³™è½åœ°ï¼Œä½†ä¸æ‘”è½¦

	# è®¡ç®—å®Œæˆçš„ç©ºç¿»æ•°
	var flips = int(abs(Global.total_rotation) / 360.0)

	# å‘å°„ç‰¹æŠ€å®Œæˆä¿¡å·ï¼ˆæ‰€æœ‰è½åœ°éƒ½å‘é€ï¼‰
	if flips > 0 or quality in ["PERFECT", "GREAT", "GOOD"]:
		SignalBus.trick_performed.emit(flips, quality, air_time)
		print("ç‰¹æŠ€ - %d ç©ºç¿» (%s)" % [flips, quality])
	elif quality == "ROUGH":
		print("ç²—ç³™è½åœ° - è§’åº¦: %.1fåº¦" % normalized_angle)

	# é‡ç½®ç©ºç¿»è®¡æ•°
	Global.total_rotation = 0.0

	SignalBus.bike_landed.emit()

func check_crash_conditions():
	"""æ£€æµ‹æ‘”è½¦æ¡ä»¶ï¼ˆæ”¾å®½ç‰ˆæœ¬ - ä¸»è¦ä¾èµ–è½¦é¡¶ç¢°æ’ï¼‰"""
	# æ¡ä»¶ 1: ä¸¥é‡ä¾§ç¿»ï¼ˆæé«˜åˆ°120åº¦ï¼Œå‡ ä¹å€’ç½®æ‰ç®—ï¼‰
	if is_on_ground and linear_velocity.length() < 30.0:
		var angle = Global.normalize_angle(rad_to_deg(rotation))
		if angle > 120:  # æé«˜é˜ˆå€¼ï¼Œæ›´å®½å®¹
			crash("TIPPED_OVER")

	# æ¡ä»¶ 2: HEAD_FIRST å·²ç§»é™¤ï¼Œç”±è½¦é¡¶ç¢°æ’æ£€æµ‹å™¨æ›¿ä»£

func crash(reason: String):
	"""æ‘”è½¦å¤„ç†"""
	if is_crashed:
		return

	is_crashed = true
	print("æ‘”è½¦ï¼åŸå› : %s" % reason)

	# å‘å°„æ‘”è½¦ä¿¡å·
	SignalBus.bike_crashed.emit(reason)

	# è§†è§‰æ•ˆæœï¼šæ¸éš
	var tween = create_tween()
	tween.tween_property(body_sprite, "modulate:a", 0.3, 0.5)

func _on_roof_hit_terrain(body: Node2D):
	"""å½“è½¦é¡¶ç¢°åˆ°åœ°å½¢æ—¶è§¦å‘æ‘”è½¦"""
	if is_crashed:
		return

	# éªŒè¯æ˜¯åœ°å½¢ç¢°æ’ï¼ˆæ£€æŸ¥çˆ¶èŠ‚ç‚¹æ˜¯å¦æ˜¯Terrainï¼‰
	if body is StaticBody2D:
		var parent = body.get_parent()
		if parent and parent is Terrain:
			print("ğŸ’¥ è½¦é¡¶ç¢°æ’åˆ°åœ°å½¢ï¼ä½ç½®: (%.0f, %.0f)" % [global_position.x, global_position.y])
			crash("ROOF_COLLISION")

func apply_boost(impulse: Vector2):
	"""æ¥æ”¶åŠ é€Ÿæ¿çš„åŠ é€Ÿå†²é‡"""
	apply_central_impulse(impulse)
	print("ğŸš€ å°è½¦åŠ é€Ÿï¼å½“å‰é€Ÿåº¦: %.0f px/s" % linear_velocity.length())

func get_speed_kmh() -> float:
	"""è·å–é€Ÿåº¦ï¼ˆkm/hï¼‰"""
	return linear_velocity.length() / 10.0  # ç®€åŒ–è½¬æ¢

func reset():
	"""é‡ç½®æ‘©æ‰˜è½¦çŠ¶æ€"""
	is_crashed = false
	air_time = 0.0
	Global.total_rotation = 0.0
	linear_velocity = Vector2.ZERO
	angular_velocity = 0.0
	rotation = 0.0

	# æ¢å¤å¯è§åº¦
	body_sprite.modulate.a = 1.0
	front_wheel_sprite.modulate.a = 1.0
	back_wheel_sprite.modulate.a = 1.0

	print("æ‘©æ‰˜è½¦å·²é‡ç½®")
